--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
               <img
                 src="assets/images/Rectangle 14 (1).png"
                 alt="portfolio pictures"
-                class="img-fluid"
+                class="img-fluid portimg"
               />
             </div>
           </div>
