--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    
+    <!--AOS-->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Evanto - Plan & Perfection</title>
   </head>
 
@@ -185,7 +186,7 @@
               <img
                 src="assets/images/Rectangle 10 (1).png"
                 alt="portfolio picture"
-                class="img-fluid horimg"
+                class="img-fluid horimg" data-aos="fade-left" data-aos="ease-out"
               />
             </div>
           </div>
@@ -194,7 +195,7 @@
               <img
                 src="assets/images/Rectangle 11 (2).png"
                 alt="portfolio picture"
-                class="img-fluid horimg "
+                class="img-fluid horimg " 
               />
             </div>
           </div>
@@ -203,7 +204,7 @@
               <img
                 src="assets/images/Rectangle 12 (1).png"
                 alt="portfolio picture"
-                class="img-fluid horimg port-img"
+                class="img-fluid horimg port-img" data-aos="fade-right" data-aos="ease-out"
               />
             </div>
           </div>
@@ -215,7 +216,7 @@
               <img
                 src="assets/images/Rectangle 13 (1).png"
                 alt="portfolio picture"
-                class="img-fluid horimg "
+                class="img-fluid horimg " data-aos="fade-left"
               />
             </div>
           </div>
@@ -224,7 +225,7 @@
               <img
                 src="assets/images/Rectangle 14 (1).png"
                 alt="portfolio pictures"
-                class="img-fluid portimg"
+                class="img-fluid portimg" data-aos="fade-right"
               />
             </div>
           </div>
@@ -430,7 +431,8 @@
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
-    
+    <!--AOS-->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <!--slick carousel-->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
