--- a/index.html
+++ b/index.html
@@ -318,9 +318,9 @@
     <section class="contact" id="contact">
       <div class="overlay">
         <div class="container py-5">
-          <div class="mt-5 mb-3">
+          <div class="mt-5 mb-3" data-aos="fade-up">
             <div class="contactdiv"></div>
-            <h5 class="aboutus ml-3">CONTACT US</h5>
+            <h5 class="aboutus ml-3" >CONTACT US</h5>
           </div>
           <div class="ml-3 ml-md-5">
             <h2 class="text-light">
