--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <!--AOS-->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!---fontawesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     <title>Evanto - Plan & Perfection</title>
   </head>
 
   <body data-spy="scroll" data-target="#navigate">
+    <div class="scroll_top"><i class="fa fa-2x fa-arrow-up" aria-hidden="true"></i></div>
     
     <nav class="navbar navbar-expand-lg py-3 navbar-light fixed-top" id="navigate">
       <div class="container">
