--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="aboutdiv"></div>
           <h5 class="aboutus ml-3">ABOUT US</h5>
           <div class="row">
-            <div class="col-md-5 pt-md-5 pt-3">
+            <div class="col-md-6 pt-md-5 pt-3 col_p">
               <h2 class="text-light my-4">
                 We plan every detail of your Wedding.
               </h2>
@@ -115,15 +115,15 @@
               </p>
               <button class="btn colord my-3 bookbtn">Book Now</button>
             </div>
-            <div class="col-md-7">
-              <div class="img_div mx-auto pt-5">
+            <div class="col-md-6 col_p">
+              <div class="img_div mx-auto pt-5 img_divone">
                 <img src="assets/images/Rectangle 6 (2).png" class="aboutimg" />
               </div>
             </div>
           </div>
           <div class="row py-5" id="services">
             <div class="col-md-6 pt-3 pt-md-2 exquisit">
-              <div class="img_div pt-5 mx-auto mx-md-0">
+              <div class="img_div pt-5 mx-auto mx-md-0 img_divtwo">
                 <img src="assets/images/Rectangle 24.png" class="aboutimg" />
               </div>
             </div>
